--- a/random-recipe-mobile/package.json
+++ b/random-recipe-mobile/package.json
@@ -19,9 +19,9 @@
     "prettier": "^3.5.3",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "tailwindcss": "^3.4.17",
     "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
