Add Card component and setup it up manually

--- a/frontend/random-recipe-router-mobile/tsconfig.json
+++ b/frontend/random-recipe-router-mobile/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "extends": "expo/tsconfig.base",
-  "moduleResolution": "node",
+  "moduleResolution": "bundler",
   "compilerOptions": {
     "baseUrl": ".",
     "strict": true,
     "paths": {
       "@/*": ["./*"],
+      "~/*": ["./*"]
     }
   },
   "include": [
