--- a/frontend/random-recipe-router-mobile/package.json
+++ b/frontend/random-recipe-router-mobile/package.json
@@ -17,6 +17,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "^53.0.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
@@ -29,6 +33,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "lucide-react-native": "^0.507.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -40,7 +45,9 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -56,8 +63,13 @@
     "jest": "^29.2.1",
     "jest-expo": "~53.0.4",
     "prettier": "^3.5.3",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
+  },
+  "overrides": {
+    "lucide-react-native": {
+      "react": "$react"
+    }
   },
   "private": true
 }
