--- a/frontend/random-recipe-router-mobile/package.json
+++ b/frontend/random-recipe-router-mobile/package.json
@@ -21,13 +21,13 @@
     "@rn-primitives/types": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^53.0.7",
+    "expo": "53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.5",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
@@ -41,7 +41,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
@@ -61,7 +61,7 @@
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.4",
+    "jest-expo": "~53.0.5",
     "prettier": "^3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
