--- a/frontend/random-recipe-router-mobile/app.json
+++ b/frontend/random-recipe-router-mobile/app.json
@@ -28,7 +28,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
