--- a/frontend/random-recipe-router-mobile/package.json
+++ b/frontend/random-recipe-router-mobile/package.json
@@ -29,26 +29,26 @@
     "@rn-primitives/types": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "53.0.12",
-    "expo-auth-session": "~6.2.0",
+    "expo": "53.0.18",
+    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.3",
     "expo-secure-store": "^14.2.3",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
-    "expo-updates": "~0.28.15",
+    "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.16",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.507.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -60,7 +60,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "@expo/config-plugins": "~10.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -74,7 +75,7 @@
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.9",
     "prettier": "^3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
