--- a/frontend/random-recipe-router-mobile/package.json
+++ b/frontend/random-recipe-router-mobile/package.json
@@ -21,7 +21,7 @@
     "testEnvironment": "jsdom"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.8.2",
@@ -29,53 +29,55 @@
     "@rn-primitives/types": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "53.0.19",
-    "expo-auth-session": "~6.2.1",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.5",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.3",
-    "expo-secure-store": "^14.2.3",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
+    "eslint-config-expo": "~10.0.0",
+    "expo": "^54.0.0",
+    "expo-auth-session": "~7.0.9",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.11",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.13",
+    "expo-web-browser": "~15.0.9",
+    "jest-expo": "~54.0.13",
     "lucide-react-native": "^0.507.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.3",
-    "@expo/config-plugins": "~10.1.1"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.9",
+    "jest-expo": "~54.0.13",
     "prettier": "^3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
