--- a/frontend/random-recipe-router-mobile/package.json
+++ b/frontend/random-recipe-router-mobile/package.json
@@ -30,20 +30,20 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-config-expo": "~10.0.0",
-    "expo": "^54.0.0",
+    "expo": "~54.0.26",
     "expo-auth-session": "~7.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.9",
-    "expo-router": "~6.0.15",
+    "expo-router": "~6.0.16",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-updates": "~29.0.13",
+    "expo-updates": "~29.0.14",
     "expo-web-browser": "~15.0.9",
     "jest-expo": "~54.0.13",
     "lucide-react-native": "^0.507.0",
