--- a/frontend/random-recipe-router-mobile/package.json
+++ b/frontend/random-recipe-router-mobile/package.json
@@ -70,22 +70,24 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-prettier": "^5.2.6",
+    "expo-module-scripts": "^5.0.8",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.13",
     "prettier": "^3.5.3",
-    "react-test-renderer": "19.0.0",
+    "react-test-renderer": "19.1.0",
     "typescript": "^5.3.3"
   },
   "overrides": {
     "lucide-react-native": {
       "react": "$react"
-    }
+    },
+    "@types/react": "~19.1.10"
   },
   "private": true
 }
