--- a/frontend/random-recipe-router-mobile/app.json
+++ b/frontend/random-recipe-router-mobile/app.json
@@ -29,7 +29,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
